<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/contact_details"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="486dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/d_img"
            android:layout_width="126dp"
            android:layout_height="111dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/d_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/name_detail" />

        <TextView
            android:id="@+id/d_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/title_detail" />

        <TextView
            android:id="@+id/d_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/number_detail" />

        <TextView
            android:id="@+id/d_dep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/department_detail" />

        <TextView
            android:id="@+id/d_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reports_detail" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_contacts_details"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/button_contact"
            android:textSize="13sp"
            app:icon="@drawable/contacts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_his_details"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/button_history"
            android:textSize="13sp"
            app:icon="@drawable/history" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>