<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    tools:context=".CreateLeaveActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/Create_Leave_Request"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText

        android:id="@+id/et_num_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/number_of_days"
        android:inputType="number"
        android:textSize="20sp"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/et_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_start_date"
        android:layout_margin="16sp"
        android:inputType="date"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/et_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/manger"
        android:inputType="text"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_your_reason"
        android:inputType="text"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_shape"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="110dp"
        android:gravity="center"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_contacts_createleave"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/button_contact"
            android:textSize="13sp"
            app:icon="@drawable/contacts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_his_createleave"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/btn_create_history"
            android:textSize="13sp"
            app:icon="@drawable/history" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


</LinearLayout>