<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="#E3E1E2"
    app:cardCornerRadius="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Media -->
        <ImageView
            android:id="@+id/card_img"
            android:layout_width="150dp"
            android:layout_height="194dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/details_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/card_tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_name" />

            <TextView
                android:id="@+id/card_tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details_title" />

            <TextView
                android:id="@+id/card_tvphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/details_number" />

            <Button
                android:id="@+id/card_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_call"
                app:icon="@android:drawable/ic_menu_call" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
