<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="login">


    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:text="@string/tv_login"
        android:textColor="#100808" />

    <EditText
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/enter_passowrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />
</LinearLayout>