<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/card_shape"
        android:layout_margin="10dp"
        android:descendantFocusability="blocksDescendants"
        >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/display_reason"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/display_manger"
            android:textColor="@color/white"
            android:layout_below="@id/reason"
            android:textStyle="bold"

            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/manager"
            android:text="@string/display_start_date"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="15dp"
            android:text="@string/display_status"
            android:textColor="#34813D"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>