<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaves_history"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="475dp">

        <ListView
            android:id="@+id/leave_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_add"
            android:tint="@android:color/white"
            android:contentDescription="@string/add_button" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_contacts_history"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/button_contact"
            android:textSize="13sp"
            app:icon="@drawable/contacts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_his_history"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/button_history"
            android:textSize="13sp"
            app:icon="@drawable/history" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


</LinearLayout>