<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_admin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/admin_name"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_width="match_parent"
            android:layout_height="525dp">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycleview"
            android:layout_gravity="bottom"
            android:gravity="center"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_contacts_main"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/button_contact"
                android:textSize="13sp"
                app:icon="@drawable/contacts" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_history_main"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/button_history"
                android:textSize="13sp"
                app:icon="@drawable/history" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </RelativeLayout>
</LinearLayout>